--- a/css/moop.css
+++ b/css/moop.css
@@ -239,7 +239,7 @@ footer .footer-meta {
   vertical-align: text-bottom;
 }
 
-.nav-link {
+.navbar .nav-link {
   color: white !important;
 }
 
